Created Button, Dropdown, and Navbar components

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,31 +1,35 @@
 @import "./bootstrap/bootstrap";
 @import "./fontawesome/regular";
 @import "./fontawesome/solid";
+@import "./fontawesome/brands";
 @import "./fontawesome/fontawesome";
 @import "./lw/login";
+@import "./lw/navbar";
+@import "./lw/buttons";
+@import "./lw/dropdown";
 
-$roboto-font-path:         "../fonts/roboto" !default;
-@font-face {
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: normal;
-  src: url('#{$fa-font-path}/Roboto-Light.ttf') format('truetype');
-}
-@font-face {
-  font-family: 'Roboto';
-  font-style: italic;
-  font-weight: normal;
-  src: url('#{$fa-font-path}/Roboto-LightItalic.ttf') format('truetype'),
-}
-@font-face {
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: bold;
-  src: url('#{$fa-font-path}/Roboto-Bold.ttf') format('truetype'),
-}
-@font-face {
-  font-family: 'Roboto';
-  font-style: italic;
-  font-weight: bold;
-  src: url('#{$fa-font-path}/Roboto-BoldItalic.ttf') format('truetype'),
-}
+//$roboto-font-path:         "../fonts/roboto" !default;
+//@font-face {
+//  font-family: 'Roboto';
+//  font-style: normal;
+//  font-weight: normal;
+//  src: url('#{$fa-font-path}/Roboto-Light.ttf') format('truetype');
+//}
+//@font-face {
+//  font-family: 'Roboto';
+//  font-style: italic;
+//  font-weight: normal;
+//  src: url('#{$fa-font-path}/Roboto-LightItalic.ttf') format('truetype'),
+//}
+//@font-face {
+//  font-family: 'Roboto';
+//  font-style: normal;
+//  font-weight: bold;
+//  src: url('#{$fa-font-path}/Roboto-Bold.ttf') format('truetype'),
+//}
+//@font-face {
+//  font-family: 'Roboto';
+//  font-style: italic;
+//  font-weight: bold;
+//  src: url('#{$fa-font-path}/Roboto-BoldItalic.ttf') format('truetype'),
+//}
