--- a/src/scss/lw/login.scss
+++ b/src/scss/lw/login.scss
@@ -1,9 +1,13 @@
-$lw-login-background-color: #444444;
-$lw-login-input-border-color: #b4b4b4;
-$lw-login-input-border-color-active: #fff;
+@import './variables';
+
+$lw-login-background-color: $lw-bg-6;
+$lw-login-input-border-color: $lw-secondary-6;
+$lw-login-input-border-color-active: $lw-secondary-6;
 $lw-login-input-border-width: 1px;
-$lw-login-input-total-height: 60px;
-$lw-login-text-color: #fff;
+$lw-login-input-total-height: 56px;
+$lw-login-text-color: $lw-secondary-1;
+$lw-login-input-total-width: 320px;
+$lw-login-logo-total-width: 230px;
 
 .lw-login-container {
 
@@ -20,11 +24,22 @@ $lw-login-text-color: #fff;
 
   .lw-login-inner-container {
 
-    width: 350px;
+    width: $lw-login-input-total-width;
     max-width: 100%;
 
-    .lw-login-image {
+    .lw-login-image-container {
       width: 100%;
+      max-width: 100%;
+      display: flex;
+      flex-direction: row;
+      flex-wrap: nowrap;
+      justify-content: center;
+
+      .lw-login-image {
+        width: $lw-login-logo-total-width;
+        max-width: 100%;
+      }
+
     }
 
     .lw-login-input-container {
@@ -43,10 +58,10 @@ $lw-login-text-color: #fff;
       box-sizing: border-box;
 
       button {
-        color: $lw-login-text-color;
+        color: $lw-secondary-6;
         height: $lw-login-input-total-height;
         line-height: $lw-login-input-total-height;
-        font-size: $lw-login-input-total-height / 3;
+        font-size: 19px;
         background-color: transparent;
         display: block;
         text-decoration: none;
@@ -57,15 +72,28 @@ $lw-login-text-color: #fff;
         border: none;
         padding-left: 10px;
         padding-right: 10px;
+        vertical-align: middle;
+
+        $svg-icon-height: 24px;
 
         &[type=submit] {
           padding: 0;
           width: $lw-login-input-total-height;
+          font-size: $svg-icon-height;
+          margin-top: -2px;
         }
 
         &:hover {
           opacity: .6;
         }
+
+        svg {
+          display: inline-block;
+          width: $svg-icon-height;
+          height: $svg-icon-height;
+          fill: $lw-nav-selected;
+        }
+
       }
 
       .lw-login-input-divider {
@@ -76,14 +104,18 @@ $lw-login-text-color: #fff;
       }
 
       input.lw-login-input {
+
+        $padding: 20px;
+
         border-style: none;
         background-color: transparent;
         color: $lw-login-text-color;
         display: block;
-        padding: $lw-login-input-total-height / 3;
+        padding: $padding;
+        padding-right: $padding - 10px;
         height: $lw-login-input-total-height;
-        line-height: $lw-login-input-total-height / 3;
-        font-size: $lw-login-input-total-height / 4;
+        line-height: $lw-login-input-total-height;
+        font-size: 16px;
         width: 100%;
         outline: none;
         font-weight: normal;
