--- a/src/scss/lw/variables.scss
+++ b/src/scss/lw/variables.scss
@@ -21,3 +21,5 @@ $lw-negative-3: #c13333; // notify-bg-neg
 $lw-positive-1: #00c209; // positive
 $lw-positive-2: #00a409; // notify-bg-pos
 $lw-nav-selected: #01ffa0; // nav-selected-green
+
+$lw-button-border-radius: 4px;
