Created initial balance component

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -11,6 +11,7 @@
 @import "./lw/dropdown";
 @import "./lw/sidebar";
 @import "./lw/inputs";
+@import "./lw/balance";
 
 body {
   background-color: $lw-bg-4;
