Created card component

--- a/src/scss/lw/balance.scss
+++ b/src/scss/lw/balance.scss
@@ -3,8 +3,9 @@
 .lw-balance-outer-container {
 
   height: 100px;
-  padding-left: 25px;
-  padding-top: 25px;
+  padding-left: 0;
+  margin-top: 25px;
+  margin-bottom: 10px;
 
   .lw-balance-note {
     font-size: 13px;
