--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,6 +12,8 @@
 @import "./lw/sidebar";
 @import "./lw/inputs";
 @import "./lw/balance";
+@import "./lw/transactions";
+@import "./lw/card";
 
 body {
   background-color: $lw-bg-4;
