Created initial Table component

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,6 +14,7 @@
 @import "./lw/balance";
 @import "./lw/transactions";
 @import "./lw/card";
+@import "./lw/table.scss";
 
 body {
   background-color: $lw-bg-4;
