--- a/src/scss/bootstrap/bootstrap.scss
+++ b/src/scss/bootstrap/bootstrap.scss
@@ -40,5 +40,5 @@
 //@import "popover";
 //@import "carousel";
 //@import "spinners";
-//@import "utilities";
+@import "utilities";
 //@import "print";
