--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -20,6 +20,7 @@
 @import "./lw/modal-send";
 @import "./lw/portfolio";
 @import "./lw/modal-transaction-detail";
+@import "./lw/dashboard";
 
 .color-negative {
   color: $lw-negative-1;
