--- a/src/scss/lw/card.scss
+++ b/src/scss/lw/card.scss
@@ -14,6 +14,7 @@
   border-style: solid;
   border-width: 1px;
   border-color: $header-background-color;
+  min-height: 0;
 
   .lw-card-header {
     background-color: $header-background-color;
@@ -40,6 +41,11 @@
     background-color: $lw-bg-5;
     width: 100%;
     flex-grow: 1;
+    min-height: 0;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
   }
 
   .lw-card-footer {
