--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -45,6 +45,12 @@ a.lw-text-primary {
 .lw-color-secondary-3 {
   color: $lw-secondary-3;
 }
+.lw-color-secondary-4 {
+  color: $lw-secondary-4;
+}
+.lw-color-secondary-5 {
+  color: $lw-secondary-5;
+}
 .lw-color-secondary-6 {
   color: $lw-secondary-6;
 }
