Pie chart widget

--- a/src/scss/lw/chart.scss
+++ b/src/scss/lw/chart.scss
@@ -1,8 +1,13 @@
 @import './variables';
+@import './fonts';
 
 .lw-dashboard-chart {
   position: relative;
 }
 .lw-portfolio-chart {
   position: relative;
+}
+.lw-portfolio-piechart {
+  position: absolute;
+  font-family: IBMPlexSans;
 }
