--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -21,6 +21,7 @@
 @import "./lw/portfolio";
 @import "./lw/modal-transaction-detail";
 @import "./lw/dashboard";
+@import "./lw/alerts";
 
 .color-negative {
   color: $lw-negative-1;
