Fix font rendering on dashboard chart

--- a/src/scss/lw/fonts.scss
+++ b/src/scss/lw/fonts.scss
@@ -27,8 +27,8 @@
 
 @font-face {
   font-family: IBMPlexMonoMedium;
-  src: local(IBMPlexMonoMedium-Regular),
-    url(../fonts/IBM_Plex_Mono/IBMPlexMonoMedium-Regular.ttf) format("truetype");
+  src: local(IBMPlexMono-Medium),
+    url(../fonts/IBM_Plex_Mono/IBMPlexMono-Medium.ttf) format("truetype");
   font-weight: normal;
   font-style: normal;
   font-stretch: normal;
