--- a/src/scss/lw/transactions.scss
+++ b/src/scss/lw/transactions.scss
@@ -13,3 +13,13 @@
   flex-direction: column;
   justify-content: flex-start;
 }
+.lw-transactions-container .date-label {
+  font-family: IBMPlexMono;
+  font-size: 13px;
+  color: $lw-secondary-1;
+}
+.lw-transactions-container .sentreceived-label {
+  font-family: IBMPlexMono;
+  font-size: 11px;
+  color: $lw-secondary-3;
+}
