--- a/src/scss/lw/card.scss
+++ b/src/scss/lw/card.scss
@@ -80,4 +80,13 @@
 
   }
 
+  .lw-card-tablerow-bottom-label {
+    font-family: IBMPlexMono;
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+    font-size: 11px;
+    line-height: 13px;
+    color: $lw-secondary-4;
+  }
 }
