--- a/src/scss/lw/modal.scss
+++ b/src/scss/lw/modal.scss
@@ -95,4 +95,48 @@
 
   }
 
+  .lw-modal-field-label {
+    font-family: IBMPlexSans;
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+    font-size: 13px;
+    color: $lw-secondary-6;
+  }
+
+  .lw-modal-placeholder-label {
+    font-family: IBMPlexSans;
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+    font-size: 15px;
+    color: $lw-secondary-6;
+  }
+
+  .lw-modal-description-label {
+    font-family: IBMPlexSans;
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+    font-size: 14px;
+    color: $lw-secondary-6;
+  }
+
+  .lw-modal-description-value {
+    font-family: IBMPlexSans;
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+    font-size: 14px;
+    color: $lw-secondary-6;
+  }
+
+  .lw-modal-description-value-bold {
+    font-family: IBMPlexSans;
+    font-weight: 500;
+    font-style: normal;
+    font-stretch: normal;
+    font-size: 14px;
+    color: $lw-secondary-10;
+  }
 }
