Fix modal send state; ui adjustments

--- a/src/scss/lw/inputs.scss
+++ b/src/scss/lw/inputs.scss
@@ -41,3 +41,15 @@ $lw-input-border-radius: 4px;
   }
 
 }
+
+/* Hide step ui on number inputs */
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
