Loading screen spinner

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -22,6 +22,7 @@
 @import "./lw/modal-transaction-detail";
 @import "./lw/dashboard";
 @import "./lw/alerts";
+@import "./lw/spinner";
 
 .color-negative {
   color: $lw-negative-1;
