--- a/src/scss/lw/sidebar.scss
+++ b/src/scss/lw/sidebar.scss
@@ -18,6 +18,7 @@ $lw-sidebar-hover-color: darken($lw-sidebar-background, 5%);
   flex-direction: column;
   justify-content: flex-start;
   overflow-y: hidden;
+  position: relative;
 
   button.lw-sidebar-button {
     font-size: 16px;
@@ -39,8 +40,9 @@ $lw-sidebar-hover-color: darken($lw-sidebar-background, 5%);
     padding-left: 20px;
 
     i {
-      width: 40px;
-      text-align: center;
+      font-size: 18px;
+      margin-left: 4px;
+      width: 36px;
     }
 
     img {
@@ -88,6 +90,22 @@ $lw-sidebar-hover-color: darken($lw-sidebar-background, 5%);
       margin-bottom: 20px;
     }
 
+  }
+
+  div.lw-sidebar-settings-panel {
+    padding-top: 10px;
+    background-color: $lw-sidebar-background;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    height: 330px;
+    z-index: 1000;
+    transition: 300ms ease-out;
+
+    &.hidden {
+      transform: translateX(-100%);
+    }
   }
 
 }
