Added security/password modal UI

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -57,7 +57,7 @@ a.lw-text-primary {
   color: $lw-secondary-6;
 }
 .lw-color-secondary-10 {
-  color: $lw-secondary-10;
+  color: $lw-secondary-10 !important;
 }
 a.lw-color-secondary-10 {
   color: $lw-secondary-10;
