--- a/src/scss/lw/buttons.scss
+++ b/src/scss/lw/buttons.scss
@@ -78,3 +78,30 @@ button {
   }
 
 }
+
+.lw-button-square {
+  width: auto;
+  max-height: 46px;
+  padding: 10px 15px;
+  text-align: center;
+  border: 1px solid #949494;
+  border-radius: 6px;
+  margin: 5px 0 5px 10px;
+  color: #949494;
+  cursor: pointer;
+
+  &:hover {
+    color: white;
+    border: 1px solid white;
+  }
+
+  &.active {
+    color: white;
+    border: 1px solid white;
+  }
+
+  &.disabled {
+    pointer-events: none;
+    opacity: 0.7;
+  }
+}
