--- a/src/scss/lw/dashboard.scss
+++ b/src/scss/lw/dashboard.scss
@@ -10,4 +10,9 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+
+  .lw-dashboard-info {
+    display: flex;
+    flex-direction: row;
+  }
 }
