Prevent text from flowing to next line
Made css more responsive for smaller sizes

--- a/src/scss/lw/card.scss
+++ b/src/scss/lw/card.scss
@@ -90,3 +90,9 @@
     color: $lw-secondary-4;
   }
 }
+
+.lw-card-tablecolumn-hideable {
+  @media only screen and (max-width: 1222px) {
+    display: none;
+  }
+}
