Created copyable text component
Implemented copyable text where openExternal was previously used

Added hideButton prop

Changed copyable text to copyable link

Updated transaction detail and send modals

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -24,6 +24,7 @@
 @import "./lw/dashboard";
 @import "./lw/alerts";
 @import "./lw/spinner";
+@import "./lw/copyable-link";
 
 // Change default sweetalert z-index
 .swal2-container {
