--- a/src/scss/lw/variables.scss
+++ b/src/scss/lw/variables.scss
@@ -22,4 +22,6 @@ $lw-positive-1: #00c209; // positive
 $lw-positive-2: #00a409; // notify-bg-pos
 $lw-nav-selected: #01ffa0; // nav-selected-green
 
+$lw-modal-default-text-color: #2f3943;
+
 $lw-button-border-radius: 4px;
